# masrobo-rcs-sdk

./: .gitlab-ci.yml  CLAUDE.md  README.md  package-lock.json
.clinerules/: project_rules.md  test_java_rules.md
.github/workflows/: pypi-publisher.yml
Open Go SDK/: README.md  base.go  error.go  iot_device.go
Open Java SDK/: README.md  pom.xml
Open NodeJS SDK/: README.md  package-lock.json  package.json
Open NodeJS SDK/lib/: base.js  client.js  request.js  validator.js
Open Python SDK/: .gitignore  README.md  setup.py
Open Python SDK/boticz_open/: base.py  config.py  exceptions.py  iot_device.py  validator.py
golang/: README.md  client.go  go.mod  validator.go
java/: .gitignore  LICENSE  README.md  pom.xml
java/scripts/: mvn-test.sh
nodejs/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
nodejs/src/: base.ts  client.ts  config.ts  error.ts  index.ts  iot_device.ts  request.ts  response.ts  robot_controller.ts  validator.ts
open-go-sdk/: README.md  config.go  go.mod  request.go  response.go
open-java-sdk/: README.md  pom.xml
open-nodejs-sdk/: README.md  index.js
open-nodejs-sdk/lib/: config.js  (+3 more)
open-python-sdk/: README.md
python/: README.md  pyproject.toml  requirements.txt  setup.py
python/boticz/: __init__.py  request.py  robot_controller.py
python/masrobo/: client.py  request.py  response.py
python/masrobo_rcs_sdk/: __init__.py  client.py  config.py  iot_device.py  request.py  response.py  robot_controller.py
python/tests/: test_device_info.py  test_remote_control.py  test_webrtc.py
scripts/: notice.sh
(+59 files in other folders)
